<?xml version="1.0"?>
<package format="3">
  <name>xarm_api</name>
  <version>0.0.0</version>
  <description>The xarm_api package</description>

  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>genmsg</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xarm_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>xarm_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xarm_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
