<?xml version="1.0"?>
<package format="3">
  <name>xarm_gripper</name>
  <version>0.1.0</version>
  <description> The xarm_gripper package </description>

  <author email="jimy92@163.com">Jimy Zhang</author>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/xarm_description</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>