<?xml version="1.0"?>
<package format="3">
  <name>xarm_msgs</name>
  <version>0.0.0</version>
  <description>The xarm_msgs package</description>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>